@@ -248,6 +248,7 @@ if (!empty($this->data['httptestid'])) {
 		new CSubmit('save', _('Save')),
 		array(
 			new CSubmit('clone', _('Clone')),
+			new CButtonQMessage('del_history', _('Clear history and trends'), _('History clearing can take a long time. Continue?')),
 			$this->data['templated'] ? null : new CButtonDelete(_('Delete scenario?'), url_param('form').url_param('httptestid').url_param('hostid')),
 			new CButtonCancel(url_param('hostid'))
 		)
